--- a/web/lifeIndicator.html
+++ b/web/lifeIndicator.html
@@ -5,9 +5,24 @@ Peter Kutschera, Wed Sep 11 12:43:30 2013$
 $Id$
 Time-stamp: "2014-02-06 13:52:21 peter"
 Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
-Peter@Kutschera.at          (privat)
-http://Peter.Kutschera.at/
-© Peter Kutschera
+-->
+
+<!--
+    Copyright (C) 2014  AIT / Austrian Institute of Technology
+    http://www.ait.ac.at
+ 
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as
+    published by the Free Software Foundation, either version 2 of the
+    License, or (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+ 
+    You should have received a copy of the GNU Affero General Public License
+    along with this program.  If not, see http://www.gnu.org/licenses/gpl-2.0.html
 -->
 
 <html>
