first version of seriouslyDeterioratedIndicator

--- a/web/indicators.html
+++ b/web/indicators.html
@@ -3,7 +3,7 @@
 /home/peter/public_html/wps/indicators.html
 Peter Kutschera, Wed Sep 11 12:43:30 2013$
 $Id$
-Time-stamp: "2014-02-07 10:04:00 peter"
+Time-stamp: "2014-02-07 11:49:04 peter"
 Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
 -->
 
@@ -53,7 +53,7 @@ Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
 </head>
 <body>
 <H1><center>
-<a href="http://www.crismaproject.eu/">CRISMA</a> lifeIndicator test page
+<a href="http://www.crismaproject.eu/">CRISMA</a> Indicator Test Page
 </center></H1>
 <hr>
 <p>
@@ -80,6 +80,7 @@ More details can be found in <a href="https://crisma-cat.ait.ac.at/component/lif
    <select id='indicator'>
      <option>lifeIndicator</option>
      <option selected>deathsIndicator</option>
+     <option>seriouslyDeterioratedIndicator</option>
    </select>
 <li> <button id='describe'>DescribeProcess</button> delivers a description of the selecteIndicator process (indicator)
 <li> 
