--- a/web/indicators.html
+++ b/web/indicators.html
@@ -3,7 +3,7 @@
 /home/peter/public_html/wps/indicators.html
 Peter Kutschera, Wed Sep 11 12:43:30 2013$
 $Id$
-Time-stamp: "2014-02-07 11:49:04 peter"
+Time-stamp: "2014-02-10 14:57:02 peter"
 Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
 -->
 
@@ -81,6 +81,7 @@ More details can be found in <a href="https://crisma-cat.ait.ac.at/component/lif
      <option>lifeIndicator</option>
      <option selected>deathsIndicator</option>
      <option>seriouslyDeterioratedIndicator</option>
+     <option>improvedIndicator</option>
    </select>
 <li> <button id='describe'>DescribeProcess</button> delivers a description of the selecteIndicator process (indicator)
 <li> 
