Added new indicator test page with tree view

--- a/web/indicators.html
+++ b/web/indicators.html
@@ -3,7 +3,7 @@
 /home/peter/public_html/wps/indicators.html
 Peter Kutschera, Wed Sep 11 12:43:30 2013$
 $Id$
-Time-stamp: "2014-02-10 14:57:02 peter"
+Time-stamp: "2014-02-11 12:51:44 peter"
 Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
 -->
 
@@ -34,7 +34,7 @@ Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
   .big { font-size:20pt }
  -->
 </style>
-<script src="jquery-1.10.2.min.js"></script>
+<script src="js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
   $(document).ready(function(){
     $("#describe").click(function(){
