--- a/web/indicators.html
+++ b/web/indicators.html
@@ -3,7 +3,7 @@
 /home/peter/public_html/wps/indicators.html
 Peter Kutschera, Wed Sep 11 12:43:30 2013$
 $Id$
-Time-stamp: "2014-03-21 12:59:20 peter"
+Time-stamp: "2014-04-01 14:17:19 peter"
 Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
 -->
 
@@ -37,6 +37,7 @@ Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
   <script src="js/jquery-2.0.3.min.js"></script>
   <script src="js/spin.min.js"></script>
   <script src="js/jquery.spin.js"></script>
+  <script src="js/xml2json.min.js"></script>
   <script src="libs/wpsControllers.js"></script>
   <!-- bootstrap -->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -55,18 +56,18 @@ Peter.Kutschera@ait.ac.at   (AIT - Austrian Institute of Technology)
   </center></H1>
   <hr>
   <p>
-
-    This example asks the Pilot C Object-Of-Interest WorldState Repository (OOI-WSR) server for entities for a given WorldState.
-    The indicator is calculated for this WorldState.
-    The result is stored (in the moment in the same WorldState repository) and the URI of the result is returned by the WPS
+    This WPS allows the calculation of indicators for WorldStates. 
+    As the indicator needs to be comparable between different WorldStates the only allowed input parameter is the WorldState reference pointing into ICMM.
   </p>
   <p>
-    <h3>Workflow (For the indicator, but it is the same for most external simulation models):</h3>
+    <h3>Workflow (For the indicator, but it is the same for simulation models):</h3>
     <ol>
-      <li> Request to indicator service (PyWPS in this case) to calculate an indicater for a particular WorldState.
-      <li> To calculate the indicator input data is needed. But only the indicator service knows which one is needed. So instead of pushing the input data (well, all data!) to the model the model asks for (and only for) whatever it needs (from OOI-WSR using CRISMA REST interface)
-      <li> Model calculates indicator value and stores it in OOI-WSR
-      <li> Model (WPS) returns URI to access result
+      <li> Request to indicator service (PyWPS in this case) to calculate an indicater for a particular ICMM WorldState.
+      <li> To calculate the indicator input data is needed. But only the indicator service knows which one is needed for a particular indicator. So the indicator process asks ICMM for access to the storage of the actual needed input data (only OOI-WSR in the moment).
+      <li> The indicator value is calculated
+      <li> The indicator value is stored in OOI-WSR
+      <li> The reference to the value is stored in ICMM
+      <li> Model (WPS) returns URI to ICMM and the actual value. Both are only used for developement purposes since all requests for data will again go over ICMM as the central meta-information catalogue.
     </ol>
 
     More details can be found in <a href="https://crisma-cat.ait.ac.at/component/lifeIndicator">the CRISMA catalogue</a>.
